--- a/src/Weather.css
+++ b/src/Weather.css
@@ -7,3 +7,22 @@
     background-image: url("https://images.pexels.com/photos/2958293/pexels-photo-2958293.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
     
 }  
+.Weather .temperature {
+    font-weight: bold;
+    font-size: 64px;
+    color: rgb(33,33,33);
+    line-height: 64px;
+    font-weight: 400;
+
+}
+
+.Weather .unit {
+    color: rgb(33, 33, 33);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1;
+    position: relative;
+    top: -32px;
+    margin-left: 0px;
+
+}
