--- a/src/Weather.css
+++ b/src/Weather.css
@@ -4,6 +4,7 @@
   padding: 16px;
   margin: 30px auto;
   border-radius: 4px;
+  box-shadow: 5px 5px 5px #c1c1c1;
   background-image: url("https://images.pexels.com/photos/9706838/pexels-photo-9706838.jpeg?auto=compress&cs=tinysrgb&w=1100&h=400&dpr=1?auto=compress&cs=tinysrgb&w=1100&h=400&dpr=2");
 }
 .Weather .temperature {
