--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -1,7 +1,16 @@
 .WeatherForecast {
-    text-align: center;
+  text-align: center;
 }
+
+.WeatherForecast .WeatherForecast-temperatures {
+  font-style: normal;
+  font-size: 18px;
+  line-height: 1.5;
+  color: #c840ca;
+  font-weight: bold;
+}
+
 .WeatherForecast-temperature-min {
-    opacity: 0.6;
-    margin-left: 5px;
+  opacity: 0.6;
+  margin-left: 5px;
 }
