Updated Weather.css and WeatherInfo.js

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -24,6 +24,10 @@
   top: -32px;
   margin-left: 0px;
 }
+.Weather .InfoWeather{
+margin: 0;
+padding: 0;
+}
 .Weather li {
     list-style: none;
 }
