--- a/src/Weather.css
+++ b/src/Weather.css
@@ -10,7 +10,7 @@
 .Weather .temperature {
   font-weight: bold;
   font-size: 64px;
-  color: rgb(33, 33, 33);
+  color: #921394;
   line-height: 64px;
   font-weight: 400;
 }
