--- a/src/Weather.css
+++ b/src/Weather.css
@@ -7,6 +7,10 @@
   box-shadow: 5px 5px 5px #c1c1c1;
   background-image: url("https://images.pexels.com/photos/9706838/pexels-photo-9706838.jpeg?auto=compress&cs=tinysrgb&w=1100&h=400&dpr=1?auto=compress&cs=tinysrgb&w=1100&h=400&dpr=2");
 }
+.Weather h1 {
+  font-weight: bold;
+  color: #000;
+}
 .Weather .temperature {
   font-weight: bold;
   font-size: 64px;
@@ -25,6 +29,7 @@
   margin-left: 0px;
 }
 .Weather .InfoWeather {
+  font-size: 18px;
   margin: 0;
   padding: 0;
 }
