--- a/src/Weather.css
+++ b/src/Weather.css
@@ -33,6 +33,11 @@
   margin: 0;
   padding: 0;
 }
+.Weather .info-weather {
+    font-size: 18px;
+    margin: 10px;
+    padding: -10px;
+}
 .Weather li {
   list-style: none;
 }
